# Calcom

./: .gitpod.yml  .travis.yml  Dockerfile  README.md  SECURITY.md  app.py  build.sh  generate.sh  install.sh  requirements.txt  setup.cfg  setup.py  snapcraft.yaml  test.py
.github/workflows/: greetings.yml  python-app.yml  python-publish.yml
Calcom/: requirements.txt
Calcom 1.1.0/: MiniCalc.py  area.py  base.py  basic.py  calculus.py  combo.py  connect4.py  double_int.py  eqns.py  eqns2.py  finding_roots.py  fun.py  fun_turtle.py  linearalg.py  log.py  main.py  means.py  number_theory.py  pig.py  requirements.txt  setup.py  single_int.py  snapcraft.yaml  trig.py  triple_int.py  volume.py  web.ipynb
Calcom 1.1.0/src/: app.py
Calcom/Calcom.egg-info/: PKG-INFO  SOURCES.txt
calcom/: pyproject.toml
src/: build.sh  description.txt  generate-aws.sh  setup.cfg
src/Calcom/: requirements.txt
src/Calcom.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Calcom/Calcom.egg-info/: SOURCES.txt
