[metadata]
name = Calcom
version = 1.0.0
author = Prithwis Das
author_email = prithwisdas2017@gmail.com
description = Calcom is an advanced and completely free tool for mathematical computation created and managed by the developers at PyCalc X.  
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Prithwis-2023/Calcom
project_urls =
    Bug Tracker = https://github.com/Prithwis-2023/Calcom/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: X11 Applications

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
